# esabot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
apps/materials/: models.py
apps/requests/: models.py
apps/school/: models.py
apps/users/: models.py
core/: callbacks.py  config.py  database.py  enums.py  handlers.py
locales/: __init__.py  en.json
migrations/models/: 0_20260601112340_init.py
tests/: conftest.py  test_config.py  test_material_models.py  test_request_models.py  test_school_models.py  test_user_models.py
