[project]
name = "esabot"
version = "0.1.0"
description = "Telegram-based academic resource management system"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"

dependencies = [
    "aerich>=0.9.2",
    "aiohttp>=3.13.5",
    "asyncpg>=0.31.0",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "tortoise-orm>=0.25.4",
]

[tool.aerich]
tortoise_orm = "core.database.TORTOISE_ORM"
location = "./migrations"
src_folder = "."
